# ChangeLog for dev-db/pgbadger
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-db/pgbadger/ChangeLog,v 1.5 2015/04/14 08:26:46 ago Exp $

*pgbadger-6.4 (14 Apr 2015)

  14 Apr 2015; Agostino Sarubbo <ago@gentoo.org> +pgbadger-6.4.ebuild:
  Version bump to 6.4

*pgbadger-6.2 (03 Nov 2014)

  03 Nov 2014; Aaron W. Swenson <titanofold@gentoo.org> -pgbadger-3.5.ebuild,
  -pgbadger-5.0.ebuild, +pgbadger-6.2.ebuild:
  Version bump. Drop old versions.

  10 Aug 2014; Sergei Trofimovich <slyfox@gentoo.org> pgbadger-3.5.ebuild,
  pgbadger-5.0.ebuild:
  QA: drop trailing '.' from DESCRIPTION

*pgbadger-5.0 (04 Mar 2014)

  04 Mar 2014; Aaron W. Swenson <titanofold@gentoo.org> +pgbadger-5.0.ebuild:
  Version bump

*pgbadger-3.5 (22 Jul 2013)

  22 Jul 2013; Aaron W. Swenson <titanofold@gentoo.org> +pgbadger-3.5.ebuild,
  +metadata.xml:
  New ebuild for pgBadger written by me.