@@ -3,24 +3,16 @@ Hash: SHA256
 
 DIST pgbadger-6.2.tar.gz 291146 SHA256 70dc0c3604baa7db9d8cc67b0c09447f8e64bd925af7f0380b79d0bdad951a8c SHA512 03cba824621d79cd1d4d77c997eb94278e22b0af413379155017fd3e8ab98ba437e5d6c27d3278ff4b84e2a0cb8c42cdbdfd65ae4c8f3db38fceedc14f62e016 WHIRLPOOL 97cf0eb88e281856484536ebb1a730460933f07662eb63dd1b0199f43d25e9c85fd22ce42688cfb6a96a0205f9231c2171c67f36fb8efb816bdfc45cf85e71dd
 DIST pgbadger-6.4.tar.gz 293529 SHA256 a2a3b38e64c20b95d3ae395f93f41cda30492f844885a7ec5d5b2fbb090ec2f3 SHA512 438662dedf79bf81d4372dd9fb5e5e28b06f7e9d21811a00043923ba4a40e6b79f73d9203158b82df5e17bf7d7d90fa298cb7728db2133694ea55381b986e132 WHIRLPOOL e2da6885dbc7fdb5395a28e530e0a2d375466ebeb5e05b326f48afacac96d874bdf32cf8181420b1b741679453c2ceae7a1993adde174e0e33cd3ccd3bb71872
+DIST pgbadger-7.0.tar.gz 305008 SHA256 7c81afca0bd61ceb96c76ba2de4f3b116b529cb74610674fe20f6ea701f1279b SHA512 fa2d514da6b03a18060409e22364f91d267b0023381fcdba7e5ebe4ac2a7dfe03c83d77499ca781ec501cd24d793ea42cc06b2950875bf31eeea69395adece43 WHIRLPOOL 4eb7143c04dd62e660d279a25bb12e8d56c74ab6df205b2411201c49d2efc6a22a0254ed62962d01f1cf2a0d41f503e4b1aa6e13d643d725bb6662ac6b2d1a2d
 EBUILD pgbadger-6.2.ebuild 509 SHA256 0358648487fa2ec109c6e1df1e86b158782bbce6ba17984c2835c427dcf7dddb SHA512 31498d2e1513a6474aad1367926455851550e729584d0571874087535f1824b6e1e30a5ef4958792eda3819ac506ba3f204c4b1d754b27f42159ed862b36bf68 WHIRLPOOL 1deb3f8625e9ef8241be96a83bb200e57d2812adb4f6375cdf247f86adaaf9741ca6b48c38e6fadebbaff62022d59823ccaff660e9413f8a75e2d33aa59784ef
 EBUILD pgbadger-6.4.ebuild 502 SHA256 c13b19436108248418ca7dbd870f2c7e6eade19e760349ad3ffc1282d26c254d SHA512 f0fcf48f9f724b71fb99321894f1d011056e366b029e962d33649a4bd81c1db3af2b49fb9fc669ad00314d7c5b2f6946ccdac0e76d758ccd3364cee9b97f08ca WHIRLPOOL 5245552d019784e8a383c4df7428f4dd4902901e67c60be1fdd5867d5ae882e8e04a30a08c51b03cd2d90c9b79120dd0fe6ec9087ad2a39a5313987b984f7e5d
-MISC ChangeLog 940 SHA256 f0ee0aa6dbaef26cd8a519925fafbbf5e10e21bbaf5002c4019aba9160644135 SHA512 9362482f64586bfa5ae45bf55f9fdd7d275d5ca10049f1511d34e661a42308d262e8f14be595877363a117e699ca3e716f2327ac27263b31360ff02de5d093df WHIRLPOOL cccd5915fd79eb92a60b5db963cedaeb699d68d3d9c059602d38fe70b23368cb1649897cf24163ad12803612127d10177f59b1aeae12c420f2708266fa098a74
+EBUILD pgbadger-7.0.ebuild 510 SHA256 f7c23562638f7b1b03688a155d54f34f465d47a1bcd51047f7212f032486f355 SHA512 7208976cf16588fc719a014d9b3a6525293759f121c4bbdcd2b60369a3ec4ac257743614a29872e43d7bf2b0a397163bb3cad4dcef6f39830b3d4177b7495656 WHIRLPOOL c4b1d3e36cdaedac0794f6dd9169c6009e30d0e7581f465d5098fbaf2f4d886dd38207b297f5085418f54f581b4ea43a22f030dd15c7277017e843f90dd5f024
+MISC ChangeLog 1070 SHA256 3852bfc7f0fb9e1bdb5a59d48177d18f286cc2f46ae97ceb88d6dbfd261011e4 SHA512 227cedea268ee150528b739ef8cb89be73e0bc57b1a250c6938d6781f9ccb4f4596272774395e2e4e5a57f560b0729f83fb2ac54ba6efcdb36061efb2e1f5b8c WHIRLPOOL f68917a4e22a8448a22cf7479031e252e99095fc3e931c27a155841701342c2e4e3505da369668ffd639afd2c0d1ae54e441b44a572615c634da52d834d98596
 MISC metadata.xml 167 SHA256 03dcd4d7bfd4fe2fb9ee0e409804371a0ed9994be46db5a72deb5c426f829070 SHA512 75039c78cb3de84c2eb565e9c2d71a1cb6028fa0384fc8308560ffd3944c86e9dc6653b9b66165eebeb4a296ee64dd297e7b643182f697df0e26f58361524ea6 WHIRLPOOL 4cf2322c87ba8e0d195abc658deb7cb7cbfbb90a862b4b61e29f164efc131928cf16b5a35c1acec08731ced804b06c3ef3fccb9b708c644b5914dac2ef8b9aa2
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iQIcBAEBCAAGBQJVLM9GAAoJELp701BxlEWfMWAP/RtMafLqn2xoXjA2dCV9wIDb
-Loi6vcv3oCtSDVydOSRNCfTqsp1iWoWc0iP2t8Uzxu9Gyk27Q3bEpXOfLO1u638M
-ytbGMa//xxmuCV+0BD8ZJYLQSrv/A2PVVr6tvPE4OgpI1dijRhWlA4mQy+/S9C0a
-c3bwCdUqTAId896M1JaQZtGmuyrKdxBm7h7sXFrMMWJWVS05mkk6EUKzhngBEJM3
-arhkwzYP8bJpN6csAo61bYCx6IJmdns8vGTdxu9cxaaQs42XB37V/wSsnxXSKDnG
-BFU/Mruh9eVIZyrLTqd9rnmLWyLaW0VLDcR5RT4dTcrxUlx1m7ya/H4MDjQe7UBG
-dYxaQFT5h4PacEjXUyG4G4DPgjmBR6mILlSKN/07lEmDyKmrGeRQSgK0eTcyrf3r
-64Ix4DkP+cM/Qd42jyLtp7220ZpYU+lUM6MR84+hOqt797BV5YBzo2v9ZgttjOpw
-2QzjReDV6DbyHsWebedW0kiVFJlLjbaRq5wQsCUdaaB/pqp1g1ch4RnK/g8J+6u7
-pJurUFzkxLMHO3/OvDG4OyW7nBxKCBfCY2oJ+cFU7IcNuVGbXUs+vWYipwHLCDw3
-RIKPf4vKIh8KV8JKkTBx7q/U9E6NJsXX5x09cvsx8Mo+QBBIadX/w0CBMCDNyyYy
-jePJpPlCcOFuikK5BGZs
-=0ntI
+iF4EAREIAAYFAlVSHrUACgkQVxOqA9G7/aD+QQD7BBBgvOr1EPMXi0Oi08j9T9f4
+sa2LUhwg49tA31CnSykBAKHYYO49y1s4TYhTSHH/II4wgZaVHsHQLBWY0FtETn7t
+=moMg
 -----END PGP SIGNATURE-----
