@@ -1,0 +1,12 @@
+DEFINED_PHASES=compile configure install prepare test unpack
+DEPEND=dev-perl/Text-CSV_XS dev-lang/perl[-build(-)]
+DESCRIPTION=pgBadger is a PostgreSQL log analyzer.
+EAPI=5
+HOMEPAGE=http://dalibo.github.io/pgbadger/
+KEYWORDS=~amd64
+LICENSE=BSD
+RDEPEND=dev-perl/Text-CSV_XS dev-lang/perl[-build(-)]
+SLOT=0
+SRC_URI=mirror://sourceforge/project/pgbadger/7.0/pgbadger-7.0.tar.gz
+_eclasses_=eutils	9fb270e417e0e83d64ca52586c4a79de	multilib	3bf24e6abb9b76d9f6c20600f0b716bf	multiprocessing	d7f2985a2c76c365ee20269db5261414	perl-app	8886390eb1ac390b27350184fd3eb32f	perl-module	7a1c6bac46bba968758a2f7666af645b	toolchain-funcs	c961250d50160cd37d6b7fd9e8429c92	unpacker	f300a7ca9131b1024a79762e8edd3c52
+_md5_=ce605101d9cce58ad2a7e6442e807a5b
