@@ -1,6 +1,11 @@
 # ChangeLog for dev-db/pgbadger
 # Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-db/pgbadger/ChangeLog,v 1.5 2015/04/14 08:26:46 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/dev-db/pgbadger/ChangeLog,v 1.6 2015/05/12 15:39:28 titanofold Exp $
+
+*pgbadger-7.0 (12 May 2015)
+
+  12 May 2015; Aaron W. Swenson <titanofold@gentoo.org> +pgbadger-7.0.ebuild:
+  version bump
 
 *pgbadger-6.4 (14 Apr 2015)
 
